@@ -117,6 +117,16 @@ Changes to Squid-2.1 (November 16, 1998):
 	- Fixed WAIS forwarding.
 	- Fixed dnsserver coredump bug caused by using both -D and
 	  -s options.
+	* Changes below have been made to SQUID_2_1_PATCH2
+	- Fixed EBIT macro bugs when the bitmask is a 64-bit long.
+	- Fixed proxy auth NULL password bug.
+	- Fixed queueing of multiple peerRefreshDNS events.
+	- Added a stack of StoreEntry objects to be released after
+	  store rebuild completes.
+	- Fixed NULL pointer bugs with too-large requests (found by
+	  Martin Lathoud).
+	- Fixed reading replies from buggy ident servers.  Replies
+	  might not have terminating CR or LF (Henrik Nordstrom).
 
 Changes to Squid-2.0 (October 2, 1998):
 
